Changed title in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,19 @@
 
     </title>
 </head>
+
 <body>
     <!-- MOST OF WHAT WE CARE ABOUT GOES IN THE BODY  -->
 
-    <h1>Hello!!!</h1>
+    <h1>Hello there!!!!</h1>
+
 
     <p>Please Enter your favorite movies:</p>
 
     <!-- LETS INCLUDE A USER FORM  -->
     <!-- <tag> -->
-        <!-- <tag attr="" attr2 = "" > -->
-    <form action="/recommend">   
+    <!-- <tag attr="" attr2 = "" > -->
+    <form action="/recommend">
         <input type="text" name="movie1" placeholder="Type movie...">
         <select name="rating1">
             <option value="1">1</option>
@@ -56,4 +59,5 @@
     <!-- <a href='/recommend'>Go to the recommendations page!</a> -->
 
 </body>
+
 </html>
